# django-bg-tasks

./: .bumpversion.cfg  .coveragerc  .gitignore  .project  .travis.yml  AUTHORS  AUTHORS.txt  LICENSE  MANIFEST.in  README.md  README.rst  classifiers  manage.py  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: django.yml
background_task/: __init__.py  admin.py  apps.py  compat.py  exceptions.py  models.py  models_completed.py  settings.py  signals.py  tasks.py  tests.py  utils.py
background_task/management/commands/: process_tasks.py
background_task/tests/: task_tests.py  test_settings.py  test_tasks.py
docs/: index.rst
tests/: run_coverage.sh  run_tests.sh  test_settings.py
