[metadata]
name = django-bg-tasks
version = 1.3.2
description = A Django app to conduct web-based polls.
long_description = file: README.rst
author = Yunus Demir
author_email = yunus@anywyse.audio
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2